# Sai42

./: .gitattributes  .gitignore  AGENTS.md  README.md
backend/: .env.example  AGENTS.md  alembic.ini  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 20260715_0001_create_places.py  20260715_0002_create_idempotency_records.py  20260715_0003_create_user_profiles.py  20260715_0004_create_date_courses.py  20260715_0005_create_community_likes.py  20260715_0006_add_chat_session_memory.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/auth/application/: __init__.py  dto.py  rate_limiter.py  service.py
backend/app/auth/domain/: __init__.py  entities.py  nickname.py
backend/app/auth/infrastructure/: __init__.py  models.py  repository.py
backend/app/auth/presentation/: __init__.py  dependencies.py  router.py
backend/app/common/: dependencies.py  dto.py  enums.py  errors.py  exception_handlers.py  middleware.py  models.py  repository.py  responses.py  router.py  schemas.py  service.py  time.py
backend/app/place/: constants.py  models.py
backend/data/: sai42.db
backend/scripts/: import_places.py
backend/tests/: test_auth_api.py  test_chat_api.py  test_chat_content_filter.py  test_chat_openai_provider.py  test_chat_travel.py  test_common_api.py  test_community_history_api.py  test_date_course_api.py  test_domain_structure.py  test_idempotency_model.py  test_import_places.py  test_place_api.py  test_user_profile_model.py  test_weather_api.py
data/: README.md
(+177 files in other folders)
