[project]
name = "sai42-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

[tool.fastapi]
entrypoint = "app.main:app"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
